--- a/css/usajobs-design-system-components.css
+++ b/css/usajobs-design-system-components.css
@@ -470,12 +470,14 @@ html {
 
 .usajobs-drawer-button--alt-handle {
   background-image: url(../img/icons/drawer/minus.svg);
-  background-position: 95% center;
+  background-position: 98% center;
+  background-size: 1.5rem;
   padding: 1.5rem 4.5rem 0.5rem 1.5rem;
 }
 
 .usajobs-drawer-button--alt-handle[aria-expanded="false"] {
   background-image: url(../img/icons/drawer/plus.svg);
+  background-size: 1.5rem;
 }
 
 .usajobs-drawer-button--alt-handle.has-no-face {
@@ -487,6 +489,7 @@ html {
   display: flex;
   -ms-flex-align: center;
       align-items: center;
+  line-height: 1.5;
 }
 
 .usajobs-drawer-button--with-icon__figure {
@@ -497,13 +500,13 @@ html {
 
 @media screen and (min-width: 62em) {
   .usajobs-drawer-button--with-icon__figure {
-    padding-right: 3rem;
+    padding-right: 1.5rem;
   }
 }
 
 .usajobs-drawer-button--with-icon__figure svg {
-  width: 5.2rem;
-  height: 5.2rem;
+  width: 4.4rem;
+  height: 4.4rem;
   vertical-align: middle;
 }
 
@@ -592,6 +595,16 @@ html {
 .usajobs-drawers .usajobs-drawer-content .usajobs-grid,
 .usajobs-drawers .usajobs-drawer-content .usa-grid {
   padding: 0;
+}
+
+.usajobs-drawers .usajobs-drawer-content--with-icon {
+  padding: 1.5rem;
+}
+
+@media screen and (min-width: 37.5em) {
+  .usajobs-drawers .usajobs-drawer-content--with-icon {
+    padding: 3rem;
+  }
 }
 
 html {
